ingresss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: devopskhaja.com
    http:
      paths:
        - path: /bascket(/|$)(.*) 
          pathType: Prefix
          backend:
            service:
              name: hema       
              port: 
                number: 80
        - path: /catalog(/|$)(.*) 
          pathType: Prefix
          backend:
            service:
              name: svc-catalog
              port: 
                number: 80
        - path: /identity(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: svc-identity
              port: 
                number: 80
